Add original interaction response edits
